vpc.tf
resource "aws_vpc" "main" {
	cidr_block = "10.0.0.0/16"
	enable_dns_hostnames = "true"
	
	tags = {
		Name = "aws-techpit"
	}
}

resource "aws_subnet" "public-a" {
	vpc_id = aws_vpc.main.id
	availability_zone = "us-east-2a"
	cidr_block = "10.0.0.0/24"
	map_public_ip_on_launch = true

	tags = {
		Name = "public-a"
	}
}


resource "aws_subnet" "public-b" {
	vpc_id = aws_vpc.main.id
	availability_zone = "us-east-2b"
	cidr_block = "10.0.1.0/24"
	map_public_ip_on_launch = true

	tags = {
		Name = "public-b"
	}
}


resource "aws_subnet" "private-a" {
	vpc_id = aws_vpc.main.id
	availability_zone = "us-east-2a"
	cidr_block = "10.0.2.0/24"
	map_public_ip_on_launch = true

	tags = {
		Name = "private-a"
	}
}

resource "aws_subnet" "private-b" {
	vpc_id = aws_vpc.main.id
	availability_zone = "us-east-2b"
	cidr_block = "10.0.3.0/24"
	map_public_ip_on_launch = true

	tags = {
		Name = "private-b"
	}
}

resource "aws_internet_gateway" "gw" {
	vpc_id = aws_vpc.main.id


	tags = {
		Name = "aws-techpit"
	}

}


resource "aws_route_table" "public" {
	vpc_id = aws_vpc.main.id

	route {
		cidr_block = "0.0.0.0/0"
		gateway_id = aws_internet_gateway.gw.id
	}

	tags = {
		Name = "public"
	}

}

resource "aws_route_table" "private" {
	vpc_id = aws_vpc.main.id
	
	tags = {
		Name = "private"
	}
}

resource "aws_route_table_association" "public-a" {
	subnet_id = aws_subnet.public-a.id
	route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-b" {
	subnet_id = aws_subnet.public-b.id
	route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "private-a" {
	subnet_id = aws_subnet.private-a.id
	route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-b" {
	subnet_id = aws_subnet.private-b.id
	route_table_id = aws_route_table.private.id
}
